Fixed layout bug caused by adding a `margin-bottom: 10px` by default.

--- a/core/app/assets/stylesheets/facts/fact_relation_search.css.less
+++ b/core/app/assets/stylesheets/facts/fact_relation_search.css.less
@@ -10,6 +10,7 @@
   .auto-complete-fact-relations {
     overflow: hidden;
     position: relative;
+    margin: 0;
 
     &.active {
       .fact-relation-post {
